--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
   max-width: 1280px;
   background-color: #2A2C2F;
-  border: 1px solid red;
+  border: 1px solid #2A2C2F;
   font-family: 'Inter', 'Arial', sans-serif;
   color: #fff;
   box-sizing: border-box;
