--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,6 @@
 .cover__title {
   font-weight: 900;
-  font-family: Inter Black;
+  font-family: 'Inter';
   font-size: 72px;
   line-height: 76px;
   text-align: center;
