--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,11 +3,14 @@
   color: #fff;
   font-size: 14px;
   line-height: 16px;
+  margin-left: auto;
 }
 
 @media screen and (max-width: 720px) {
   .footer__copyright  { 
     margin-top: 48px;
     margin-bottom: 24px;
+    margin-left: 0;
+    line-height: 14px;
   }
 }
