--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -8,8 +8,16 @@
   line-height: 28px;
 }
 
+.header__lang-link:nth-of-type(1):active{
+  text-decoration: none;
+}
+
 .header__lang-link:nth-of-type(2){
   text-decoration: none;
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 767px) {
