--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,13 +7,14 @@
   font-size: 96px;
   line-height: 100px;
   color: #fff;
-  font-family: Inter Black;
+  font-family: 'Inter';
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .lead__title { 
     font-size: 72px;
     line-height: 76px;
+    margin-top: 20px;
   }
 }
 
