--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,7 @@
 .lead__title{
   max-width: 720px;
   margin: 0 auto;
-  margin-top: 28px;
+  margin-top: 56px;
   text-align: center;
   font-weight: 900;
   font-size: 96px;
@@ -10,11 +10,16 @@
   font-family: 'Inter';
 }
 
+@media screen and (max-width:1280px) {
+  .lead__title{
+    margin-top: 48px;
+  }  
+}
+
 @media screen and (max-width: 767px) {
   .lead__title { 
     font-size: 72px;
     line-height: 76px;
-    margin-top: 20px;
   }
 }
 
